--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   tflite_flutter: ^0.9.1
   image_picker: ^0.8.7+3
   flutter_launcher_icons: ^0.13.0
+  cloud_firestore: ^4.7.0
 
 flutter_icons:
   android: "launcher_icon"
