--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   image_picker: ^0.8.7+3
   flutter_launcher_icons: ^0.13.0
   cloud_firestore: ^4.7.0
+  firebase_database: ^10.2.1
 
 flutter_icons:
   android: "launcher_icon"
