--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   flutter_launcher_icons: ^0.13.0
   cloud_firestore: ^4.7.0
   firebase_database: ^10.2.1
+  flutter_svg: ^2.0.6
+  dynamic_color: ^1.6.5
 
 flutter_icons:
   android: "launcher_icon"
