--- a/firebase.json
+++ b/firebase.json
@@ -1,11 +1,17 @@
 {
   "hosting": {
     "site": "credix",
-    "public": "public",
+    "public": "build/web",
     "ignore": [
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
+    ],
+    "rewrites": [
+      {
+        "source": "**",
+        "destination": "/index.html"
+      }
     ]
   },
   "database": {
