--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   firebase_database: ^10.2.1
   flutter_svg: ^2.0.6
   dynamic_color: ^1.6.5
+  font_awesome_flutter: ^10.4.0
+  google_sign_in_web: ^0.12.0+1
 
 flutter_icons:
   android: "launcher_icon"
