--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,9 +1,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.credix">
+
    <application
         android:label="credix"
         android:name="${applicationName}"
         android:icon="@mipmap/launcher_icon">
+            <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+    <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION"/>
         <activity
             android:name=".MainActivity"
             android:exported="true"
