--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   dynamic_color: ^1.6.5
   font_awesome_flutter: ^10.4.0
   google_sign_in_web: ^0.12.0+1
+  firebase_storage: ^11.2.4
+  location: ^4.4.0
 
 flutter_icons:
   android: "launcher_icon"
